2001-09-15  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItemCell.m
	Added [dealloc]. In [setMenuView:], if the menu belongs to a popup
	set the ivar _mcell_belongs_to_popupbutton.
	* Source/NSPopupButtonCell.m
	Removed additional method on NSMenuItemCell. Removed code in
	[insertItemWithTitle:atIndex:] to set the NSMenuItemCell to belong
	to a popup. Simplified [attachPopUpWithFrame:inView:] and [selectItem:]
	* Header/gnustep/gui/NSMenuView.h
	Removed [_setCellSize:].
	* Source/NSMenuView.m
	Added [dealloc]. [setWindowFrameForAttachingToRect:...] now
	expects the screenRect to be the frame of the cell to attach to.
	Removed [_setCellSize:].

2001-09-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m
	Remove function title_height(), replaced calls to it with
	[NSMenuView menuBarHeight]. [setSubmenu:forItem:] moved code
	to [NSMenuItem setSubmenu]. [update] use _changedMessagesEnabled
	to prevent recursion. [sizeToFit] call [setNeedsDisplay:] instead
	of [display]. [locationForSubmenu:] moved code to [NSMenuView
	locationForSubmenu:]. 
	Added [NSMenuWindowTitleView rightMouseDown:], so the main menu
	is not shown in a menu.
	* Source/NSMenuItem.m
	Call [NSMenu itemChange:] in all setXX methods. [setSubmenu:] set
	the title of the submenu to our title.  
	* Header/gnustep/gui/NSMenuView.h
	Removed ivar meunv_menu and reuse _menu from NSResponder.
	Renamed all the ivars.
	* Source/NSMenuView.m
	Adopted to changes in header.
	[menuBarHeight]	use code from title_height(). Added dummy
	[initAsTearOff]. Added a lot of code to support horizontal menus,
	still unfinished. [setHighlightedItemIndex:] don't display items
	only mark them as needing display. [locationForSubmenu:] moved
	code from NSMenu to here. [mouseDown:] simplified code.
		
2001-09-09  Michael Hanni <mhanni@sprintmail.com>

	* Source/Functions.m (NSDrawButton): rearrange the order of 
	coloring to take into account the nature of NSDrawTiledRects; 